--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     </main>
   </div>
 
-  <script src="./app.js"></script>
+<script src="./api.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
